--- a/hamid/pubspec.yaml
+++ b/hamid/pubspec.yaml
@@ -59,6 +59,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    - assets/images/homeCards/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
