--- a/hamid/pubspec.yaml
+++ b/hamid/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   pull_to_refresh: ^1.4.5
+  flutter_animate: ^4.5.0
   flutter:
     sdk: flutter
     
@@ -40,6 +41,7 @@ dependencies:
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
+
   flutter_test:
     sdk: flutter
 
