--- a/hamid/pubspec.yaml
+++ b/hamid/pubspec.yaml
@@ -33,6 +33,13 @@ dependencies:
   flutter_animate: ^4.5.0
   flutter:
     sdk: flutter
+  flutter_launcher_icons: ^0.13.1
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/darkhamid.jpeg"
+
     
 
 
