--- a/hamid/pubspec.yaml
+++ b/hamid/pubspec.yaml
@@ -29,16 +29,25 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  pull_to_refresh: ^1.4.5
+  pull_to_refresh: ^2.0.0
   flutter_animate: ^4.5.0
   flutter:
     sdk: flutter
   flutter_launcher_icons: ^0.13.1
+  flutter_reorderable_grid_view: ^4.0.0
+  hexcolor: ^3.0.1
+  flutter_svg: ^2.0.9
+  flutter_staggered_grid_view: ^0.7.0
+  flutter_shake_animated: ^0.0.5
+  badges: ^3.1.2
+  drag_and_drop_gridview: ^1.0.4
 
 flutter_launcher_icons:
   android: true
   ios: true
   image_path: "assets/images/darkhamid.jpeg"
+
+
 
     
 
@@ -57,7 +66,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
